--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: jekyll-rtd-theme
+title: South European FAE team
 description: Just another documentation theme compatible with GitHub Pages
 
 theme: null
