--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".\\zigbee\\Z3_RollerShutter"]
-	path = .\\zigbee\\Z3_RollerShutter
+[submodule "zigbee/Z3_RollerShutter"]
+	path = zigbee/Z3_RollerShutter
 	url = https://github.com/brian-silabs/Z3_RollerShutter.git
