--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Zigbee/Applications/Z3_RollerShutter"]
 	path = Zigbee/Applications/Z3_RollerShutter
 	url = https://github.com/brian-silabs/Z3_RollerShutter.git
+[submodule "Zigbee/Applications/Z3_TemperatureSensor"]
+	path = Zigbee/Applications/Z3_TemperatureSensor
+	url = https://github.com/brian-silabs/Z3_TemperatureSensor.git
