--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Zigbee/Applications/Z3_TemperatureSensor"]
 	path = Zigbee/Applications/Z3_TemperatureSensor
 	url = https://github.com/brian-silabs/Z3_TemperatureSensor.git
+[submodule "Zigbee/Applications/Z3_GatewayHost"]
+	path = Zigbee/Applications/Z3_GatewayHost
+	url = https://github.com/brian-silabs/Z3_GatewayHost.git
